--- a/index.html
+++ b/index.html
@@ -88,7 +88,50 @@ function yesClicked() {
     </h1>
     `;
 }
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
+<script>
+let count = 0;
+
+function moveButton() {
+    count++;
+    let button = document.getElementById("noBtn");
+    let x = Math.random() * (window.innerWidth - 100);
+    let y = Math.random() * (window.innerHeight - 100);
+    button.style.left = x + "px";
+    button.style.top = y + "px";
+
+    if (count >= 3) {
+        alert("Nivetha 😌 destiny already decided... only YES works here ❤️");
+    }
+}
+
+function yesClicked() {
+    document.body.innerHTML = `
+    <h1 style="color:white; padding-top:100px;">
+    Nivetha 💖<br><br>
+    From the day I found you,<br>
+    my struggles felt lighter,<br>
+    my dreams felt closer,<br>
+    and my heart felt complete.<br><br>
+    Like every beautiful movie climax,<br>
+    this is where love wins ❤️<br><br>
+    I choose you. Every day. Forever.
+    </h1>
+    `;
+
+    confetti({
+        particleCount: 200,
+        spread: 120,
+        origin: { y: 0.6 }
+    });
+
+    let audio = new Audio("https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3");
+    audio.volume = 0.3;
+    audio.play();
+}
 </script>
+
 
 </body>
 </html>
