--- a/index.html
+++ b/index.html
@@ -2,92 +2,120 @@
 <html>
 <head>
     <title>For Nivetha ❤️</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
         body {
-            background: linear-gradient(to right, #ff9a9e, #fad0c4);
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to right, #ff758c, #ff7eb3);
             text-align: center;
-            font-family: Arial, sans-serif;
-            padding-top: 100px;
+            font-family: 'Segoe UI', sans-serif;
+            overflow-x: hidden;
         }
 
         h1 {
-            font-size: 40px;
             color: white;
+            font-size: 38px;
+            margin-top: 80px;
         }
 
         p {
-            font-size: 20px;
             color: white;
-            width: 70%;
-            margin: auto;
+            font-size: 18px;
+            width: 80%;
+            margin: 20px auto;
+            line-height: 1.6;
         }
 
         button {
             padding: 15px 30px;
             font-size: 18px;
             border: none;
-            border-radius: 10px;
+            border-radius: 12px;
             cursor: pointer;
             margin: 20px;
+            transition: 0.3s;
         }
 
         #yesBtn {
-            background-color: #ff4d6d;
+            background-color: #ff2e63;
             color: white;
+        }
+
+        #yesBtn:hover {
+            transform: scale(1.1);
         }
 
         #noBtn {
             background-color: white;
-            color: #ff4d6d;
+            color: #ff2e63;
             position: absolute;
+        }
+
+        .hidden {
+            display: none;
+        }
+
+        input {
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 8px;
+            border: none;
+            margin-top: 15px;
         }
     </style>
 </head>
 
 <body>
 
-    <h1>Will you be my Valentine, Nivetha? 💖</h1>
+<h1>Will you be my Valentine, Nivetha? 💖</h1>
 
+<p>
+I once went searching for success…  
+The sky whispered, “This is not your place.”  
+
+I walked through storms.  
+I chose higher studies.  
+I faced problems alone.  
+
+And in the middle of all that chaos…  
+I found you.  
+
+Like every movie where destiny brings two souls together…  
+You weren’t part of my plan —  
+You became my forever. ❤️
+</p>
+
+<button id="yesBtn" onclick="yesClicked()">YES 💕</button>
+<button id="noBtn" onclick="moveButton()">NO 😏</button>
+
+<div id="puzzleSection" class="hidden">
+    <h1>Prove Your Love 😌💘</h1>
+    <p>Where did our story truly begin?</p>
+    <input type="text" id="answer1" placeholder="Type your answer">
+    <br>
+    <button onclick="checkAnswer()">Submit</button>
+</div>
+
+<div id="finalMessage" class="hidden">
+    <h1>Nivetha 💖</h1>
     <p>
-        I once went searching for success…  
-        The sky whispered, “This is not your place.”  
-        I walked through storms and silent nights.  
-        I chose higher studies. I chose growth.  
-        I faced problems alone.  
-        And in the middle of all that chaos…  
-        I found you.  
+    You are not just someone I love.  
+    You are the peace after my storms.  
+    The smile after my struggles.  
 
-        Like in the movies where love arrives when the hero least expects it…  
-        You became my destiny. ❤️
+    If life is a movie,  
+    you are my favorite scene. 🎬❤️  
+
+    I choose you.  
+    Today. Tomorrow. Forever.  
+
+    This is just the beginning of our beautiful story.
     </p>
+</div>
 
-    <button id="yesBtn" onclick="yesClicked()">YES 💕</button>
-    <button id="noBtn" onclick="moveButton()">NO 😏</button>
-
-<script>
-let count = 0;
-
-function moveButton() {
-    count++;
-    let button = document.getElementById("noBtn");
-    let x = Math.random() * window.innerWidth;
-    let y = Math.random() * window.innerHeight;
-    button.style.left = x + "px";
-    button.style.top = y + "px";
-
-    if (count >= 3) {
-        alert("I think destiny already chose YES 😌❤️");
-    }
-}
-
-function yesClicked() {
-    document.body.innerHTML = `
-    <h1 style="color:white; padding-top:100px;">
-    You just made my world brighter, Nivetha 💖✨<br><br>
-    This is just the beginning of our beautiful story...
-    </h1>
-    `;
-}
 <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <script>
@@ -102,23 +130,14 @@ function moveButton() {
     button.style.top = y + "px";
 
     if (count >= 3) {
-        alert("Nivetha 😌 destiny already decided... only YES works here ❤️");
+        alert("Nivetha 😌 destiny already chose YES ❤️");
     }
 }
 
 function yesClicked() {
-    document.body.innerHTML = `
-    <h1 style="color:white; padding-top:100px;">
-    Nivetha 💖<br><br>
-    From the day I found you,<br>
-    my struggles felt lighter,<br>
-    my dreams felt closer,<br>
-    and my heart felt complete.<br><br>
-    Like every beautiful movie climax,<br>
-    this is where love wins ❤️<br><br>
-    I choose you. Every day. Forever.
-    </h1>
-    `;
+    document.getElementById("yesBtn").style.display = "none";
+    document.getElementById("noBtn").style.display = "none";
+    document.getElementById("puzzleSection").classList.remove("hidden");
 
     confetti({
         particleCount: 200,
@@ -130,8 +149,24 @@ function yesClicked() {
     audio.volume = 0.3;
     audio.play();
 }
-</script>
 
+function checkAnswer() {
+    let answer = document.getElementById("answer1").value.toLowerCase();
+
+    if (answer.includes("college") || answer.includes("work") || answer.includes("there")) {
+        document.getElementById("puzzleSection").classList.add("hidden");
+        document.getElementById("finalMessage").classList.remove("hidden");
+
+        confetti({
+            particleCount: 300,
+            spread: 150,
+            origin: { y: 0.6 }
+        });
+    } else {
+        alert("Think again my love 😌❤️");
+    }
+}
+</script>
 
 </body>
 </html>
